--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <title>SPA - Todos</title>
 </head>
 <body>
@@ -20,15 +20,15 @@
             </div>
             <div class="header-right">
                 <div id="logo">
-                    <img src="/images/user.png" alt="Logo" class="Usuario">
+                    <img src="../images/user.png" alt="Logo" class="Usuario">
                     <span>Mi cuenta</span>
                 </div>
                 <div id="flag">
                     <span>ES</span>
-                    <img src="/images/flag.png" alt="Flag" class="Bandera Pais">
+                    <img src="../images/flag.png" alt="Flag" class="Bandera Pais">
                 </div>
                 <div id="arrow">
-                    <a href=""><img src="/images/arrow.png" alt="Arrow" class="Flecha de seleccion"></a>
+                    <a href=""><img src="../images/arrow.png" alt="Arrow" class="Flecha de seleccion"></a>
                 </div>
             </div>
         </div>
@@ -85,7 +85,7 @@
                 <div class="texto">
                     <h3 style="font-weight: normal;">Masaje relajante</h3>
                 </div>
-                <img src="/images/relajante.png" alt="relajante">
+                <img src="../images/relajante.png" alt="relajante">
                 <div>
                     <div style="font-weight: normal;" class="descripcion">
                         Esta es una descripcion de la opción en cuestión .....
@@ -106,7 +106,7 @@
                 <div class="texto">
                     <h3 style="font-weight: normal;">Masaje con bambú</h3>
                 </div>
-                <img src="/images/bambu.png" alt="bambu">
+                <img src="../images/bambu.png" alt="bambu">
                 <div>
                     <div style="font-weight: normal;" class="descripcion">
                         Esta es una descripcion de la opción en cuestión .....
@@ -129,7 +129,7 @@
             <div class="gold">
                 <div class="imageen">
                     <div class="imagen">
-                        <img src="/images/gold.png" alt="gold">
+                        <img src="../images/gold.png" alt="gold">
                     </div>  
                 </div>
             </div>
